crates/eure-macros/tests/compile_fail/proxy_named_type_mismatch_into.stderr
error[E0308]: mismatched types
  --> tests/compile_fail/proxy_named_type_mismatch_into.rs:12:5
   |
12 |     a: u64,
   |     ^^^---
   |     |  |
   |     |  expected due to this
   |     expected `&u64`, found `&u32`
   |
   = note: expected reference `&u64`
              found reference `&u32`
